--- a/package.json
+++ b/package.json
@@ -10,7 +10,17 @@
   "author": "princy",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "cron": "^3.1.6",
+    "crons": "^1.1.1-alpha.0",
+    "dotenv": "^16.3.1",
     "drag-drop": "^7.2.0",
+    "express": "^4.18.2",
+    "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.0",
     "nodemon": "^3.0.1"
   }
 }
