--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "cors": "^2.8.5",
     "cron": "^3.1.6",
     "crons": "^1.1.1-alpha.0",
+    "csv-writer": "^1.6.0",
+    "csvtojson": "^2.0.10",
     "dotenv": "^16.3.1",
     "drag-drop": "^7.2.0",
     "express": "^4.18.2",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1"
   }
 }
